2009-11-10  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/shadow.el (find-emacs-lisp-shadows)
	(list-load-path-shadows): Use dolist.
	(list-load-path-shadows): Use with-current-buffer.

2009-11-10  Juri Linkov  <juri@jurta.org>

	* minibuffer.el (read-file-name): Support a list of default values
	in `default-filename'.  Use the first file name where only one
	element is required.  Doc fix.

2009-11-09  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-unregister-object): Release service, if no
	other method is registered for it.

2009-11-08  Markus Rost  <rost@math.uni-bielefeld.de>

	* bookmark.el (bookmark-completing-read): Sort bookmark names if
	bookmark-sort-flag is non-nil (Bug#4653).

2009-11-08  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/semantic/ctxt.el (semantic-get-local-variables): Disable
	the progress reporter entirely.

	* emulation/cua-base.el: Add CUA property to some CC mode commands
	(Bug#4100).

2009-11-08  Kevin Ryde  <user42@zip.com.au>

	* emacs-lisp/checkdoc.el (checkdoc-proper-noun-regexp): Match noun
	at end of sentence (Bug#4818).

2009-11-08  Jared Finder  <jfinder@crypticstudios.com>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Handle "see declaration of" MSFT statements (Bug#4100).

2009-11-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-advice-make-auto-save-file-name)
	(tramp-advice-file-expand-wildcards): Unload via
	`ad-remove-advice'.

	* net/trampver.el: Update release number.

2009-11-08  Kevin Ryde  <user42@zip.com.au>

	* net/tramp.el (tramp-advice-file-expand-wildcards): Don't rely on
	`ad-do-it'.

2009-11-08  Andr  <m00naticus@gmail.com>  (tiny change)

	* net/tramp.el (tramp-handle-write-region): Copy but rename temp file,
	in order to keep context in SELinux.

2009-11-08  Chong Yidong  <cyd@stupidchicken.com>

	* dired-aux.el (dired-query): Place cursor in echo area and allow
	C-g.

	* dired.el (dired-mode-map): Disable dired-maybe-insert-subdir